# v2_intersection_gen

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  clipper.hpp  intersection_generator.cpp  intersection_generator.h  intersection_shape_generator.cpp  iodata_shapefile.h  main.cpp  shapefile.hpp  types.h  utils.h
src/area_generator/: fine_area.cpp
src/constraints/: cluster_order.cpp  cluster_order.h  fence_check.cpp  fence_check.h  infeasibility_detector.cpp  infeasibility_detector.h  intersection_check.cpp  intersection_check.h
src/curve/: bezier.cpp  bezier.h  curve_utils.cpp  curve_utils.h  hermite_init.cpp  hermite_init.h
src/generator/: connectivity_generator.cpp  connectivity_generator.h  edge_line_generator.h  fine_area_generator.cpp  fine_area_generator.h  lane_edge_generator.cpp  lane_edge_generator.h  polygon_builder.h
src/io/: iodata_json.h
src/lane_connector/: connectivity_generator.cpp  connectivity_generator.h  lane_edge_generator.cpp  lane_edge_generator.h
src/optimizer/: lbfgs_solver.cpp  lbfgs_solver.h  penalty_cost.cpp  penalty_cost.h  sdf_field.cpp  sdf_field.h
tests/: iodata_shapefile.h  scenario_builder.h  shapefile.hpp  test_bezier.cpp  test_cluster.cpp  test_infeasibility.cpp  test_integration.cpp  test_optimizer.cpp  test_scenarios.cpp  test_sdf.cpp
